--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body class="dark-theme">
-    <h1>Welcome To Krugermeiier's Website!</h1>
-    <p id="msg">randomshitgoeshere</p>
-    <a href="./youtube.html">Youtube</a>
-    <a href="./twitter.html">Twitter</a>
+    <div class="main">
+       <h1>Welcome To Krugermeiier's Website!</h1>
+       <p id="msg">randomshitgoeshere</p>
+    </div>
+    <div class="sidenav">
+        <a href="./youtube.html">Youtube</a>
+        <a href="./twitter.html">Twitter</a>
+    </div>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
