--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
        <p id="msg">randomshitgoeshere</p>
     </div>
     <div class="sidenav">
-        <a href="./youtube.html">Youtube</a>
-        <a href="./twitter.html">Twitter</a>
+        <a> href="./youtube.html">Youtube</a>
+        <a> href="./twitter.html">Twitter</a>
     </div>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
