--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="UTF-8">
   <title>Krugermeiier's Website</title>
   <link rel="stylesheet" href="main.css">
@@ -11,8 +11,8 @@
        <p id="msg">randomshitgoeshere</p>
     </div>
     <div class="sidenav">
-        <a> href="./youtube.html">Youtube</a>
-        <a> href="./twitter.html">Twitter</a>
+        <a href="https://youtube.com">Youtube</a>
+        <a href="https://twitter.com/krugermeiier">Twitter</a>
     </div>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
