--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body class="dark-theme">
-    <div class="main">
-       <h1>Welcome To Krugermeiier's Website!</h1>
-       <p id="msg">randomshitgoeshere</p>
-    </div>
-    <div class="sidenav">
-        <a href="https://youtube.com">Youtube</a>
-        <a href="https://twitter.com/krugermeiier">Twitter</a>
-    </div>
+  <div class="topbar">
+    <h1>Welcome To Krugermeiier's Website!</h1>
+    <p id="msg">Home of some random shit that I've been doing.</p>
+  </div>
+  
+  <div class="sidenav">
+    <p id="msg">Socials</p>
+    <a href="https://www.youtube.com/channel/UCr9E0NEfMq02imCENuRUMcQ">Youtube</a>
+    <a href="https://twitter.com/Krugermeiier">Twitter</a>
+  </div>
+    
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
 </html>
