--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         <h1>Krugermeiier // Jeevat</h1>
         <a href="https://www.youtube.com/channel/UCr9E0NEfMq02imCENuRUMcQ">Youtube</a> <a href="https://www.twitter.com/Krugermeiier">Twitter</a> <a href="https://github.com/krugermeiier/">Github</a>
         
-        <p>Hi, my name is Jeevat. I make random shit sometimes, mostly in Python or in JavaScript.</p>
+        <p>Hi, my name is Jeevat, but people mostly know me by the username 'Krugermeiier'. I'm 16 and from Northeastern United States. <br> 
+            I make random shit sometimes, whether it's programs made mostly in Python or in JavaScript or other stuff like videos and small art. <br>
+            I do also play games, Hitman 3 is probably my favorite.
+        </p>
+        <p>My username originates from <a href="https://hitman.fandom.com/wiki/Krugermeier_2-2">Hitman World of Assassination's Krugermeier</a>. I just thought it sounded cool and rolled with it. <br>
+            The reason there is an extra i in my name is because the name 'Krugermeier' was taken like everywhere, lmao.
+        </p>
       </div>
     
   </body>
