--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             I make random shit sometimes, whether it's programs made mostly in Python or in JavaScript or other stuff like videos and small art. <br>
             I do also play games, Hitman 3 is probably my favorite.
         </p>
-        <p>My username originates from <a href="https://hitman.fandom.com/wiki/Krugermeier_2-2">Hitman World of Assassination's Krugermeier</a>. I just thought it sounded cool and rolled with it. <br>
+        <p>My username originates from <a href="https://hitman.fandom.com/wiki/Krugermeier_2-2">Hitman World of Assassination's Krugermeier</a>, a subsonic pistol that looks cool and is very useful. <br>
+            I just thought it sounded cool and rolled with it. <br>
             The reason there is an extra i in my name is because the name 'Krugermeier' was taken like everywhere, lmao.
         </p>
       </div>
