--- a/cj2CamFail.html
+++ b/cj2CamFail.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Contract Jam 2 Camera Fails</title>
-      <meta http-equiv = "refresh" content = "0; url = https://krugermeiier.tk" />
+      <meta http-equiv = "refresh" content = "0; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
    </head>
    <body>
       <p>yes</p>
