--- a/index.html
+++ b/index.html
@@ -20,13 +20,33 @@
         <h1>Krugermeiier // Jeevat</h1>
         <a href="https://www.youtube.com/channel/UCr9E0NEfMq02imCENuRUMcQ">Youtube</a> <a href="https://www.twitter.com/Krugermeiier">Twitter</a> <a href="https://github.com/krugermeiier/">Github</a>
         
-        <p>Hi, my name is Jeevat, but people mostly know me by the username 'Krugermeiier'. I'm 16 and from Northeastern United States. <br> 
-            I make random shit sometimes, whether it's programs made mostly in Python or in JavaScript or other stuff like videos and small art. <br>
-            I do also play games, Hitman 3 is probably my favorite.
+        <p>Hi, my name is Jeevat, but online I go as 'Krugermeiier'. I'm 16 and from Northeastern United States. <br> 
+            I make random stuff sometimes, whether it's programs made mostly in Python or in JavaScript or other stuff like videos, games, and small art. <br>
         </p>
+
+        <p>I started game development in 2017, and even though its now 2022, I have not that much to show for it. <br>
+        Here's a brief timeline.
+        </p>
+
+        <dl>
+          <dt>2017</dt>
+          <dd>-Made a small tech demo.</dd>
+          <dt>2018</dt>
+          <dd>-Made a game called 'Shadowclysm' for a school project.</dd>
+          <dt>2019</dt>
+          <dd>-Made a game called 'Magic Against the Horde' for a school project with friends.</dd>
+          <dt>2020</dt>
+          <dd>-Made what I believe as my most polished game, 'Gunshots, Gangsters, and the 60s Car' <br>
+            for Ludum Dare 46 with the theme 'Keep it Alive'.</dd>
+          <dt>2021</dt>
+          <dd>-Made small tech demos and projects.</dd>
+          <dt>2022</dt>
+          <dd>-Same as 2021, nothing major to add.</dd>
+        </dl>
+
         <p>My username originates from <a href="https://hitman.fandom.com/wiki/Krugermeier_2-2">Hitman World of Assassination's Krugermeier</a>, a subsonic pistol that looks cool and is very useful. <br>
             I just thought it sounded cool and rolled with it. <br>
-            The reason there is an extra i in my name is because the name 'Krugermeier' was taken like everywhere, lmao.
+            The reason there is an extra i in my name is because the name 'Krugermeier' was taken like everywhere.
         </p>
       </div>
     
