fixed color of the timeline

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         p    {color: #ffffff;}
         a    {color: #ffffff;}
         a:hover {color: #818181;}
+        dl {color: #ffffff}
         </style>
     <meta charset="utf-8">
     <title>Krugermeiier // Jeevat</title>
